--- a/MyEShoppingWebsite/AdminMasterPage.master
+++ b/MyEShoppingWebsite/AdminMasterPage.master
@@ -194,7 +194,7 @@
             <div class="sidebar pe-4 pb-3">
                 <nav class="navbar bg-secondary navbar-dark">
                     <a href="#" class="navbar-brand mx-4 mb-3">
-                        <h3 class="text-primary"><i class="fa fa-shopping-basket me-2"></i>Eshopping</h3>
+                        <h3 class="text-primary"><i class="fa fa-store me-2"></i>Eshopping</h3>
                     </a>
                     <div class="d-flex align-items-center ms-4 mb-4">
                         <div class="position-relative">
