--- a/MyEShoppingWebsite/AdminMasterPage.master
+++ b/MyEShoppingWebsite/AdminMasterPage.master
@@ -259,7 +259,7 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                                 <a href="AdminProfile.aspx" class="dropdown-item">My Profile</a>
-                                <a href="#" class="dropdown-item">Settings</a>
+                                <a href="AdminSetting.aspx" class="dropdown-item">Settings</a>
                                 <asp:Button ID="btnlogout" type="button" CssClass="dropdown-item btn btn-outline-light navbar-btn float-right mr-2" runat="server" Text="Sign Out" OnClick="btnlogout_Click1" />
                             </div>
                         </div>
