--- a/MyEShoppingWebsite/User.master
+++ b/MyEShoppingWebsite/User.master
@@ -43,7 +43,7 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="UserHome.aspx">Home</a> </li>
+                            <li><a href="Default.aspx">Home</a> </li>
                             <li><a href="About.aspx">About</a> </li>
                             <li><a href="Contact.aspx">Contact US</a> </li>
                             <li><a href="Products.aspx">Product</a> </li>
