--- a/MyEShoppingWebsite/User.master
+++ b/MyEShoppingWebsite/User.master
@@ -77,7 +77,7 @@
     <footer class="navbar-fixed-bottom bg-danger">
         <div class="container ">
             <p class="pull-right "><a href="#">&nbsp; &nbsp; Back to top &nbsp; &nbsp;</a></p>
-            <p class="pull-right "><a href="AdminLogin.aspx">Admin Login  </a></p>
+            <%--<p class="pull-right "><a href="AdminLogin.aspx">Admin Login  </a></p>--%>
             <p>&copy;2022 &middot; <a href="Default.aspx">Home</a>&middot;<a href="#">About</a>&middot;<a href="#">Contact</a>&middot;<a href="#">Products</a> </p>
         </div>
     </footer>
